fix: Update styles for quick access panel to prevent overflow (#17)

--- a/common/common.scss
+++ b/common/common.scss
@@ -1440,3 +1440,14 @@ a.badge-notification {
 .suggested-topics-wrapper {
   pointer-events: all;
 }
+
+/*
+  Adjust the quick access panel for the updated 
+  discourse (early 2026)
+*/
+
+--header-offset: 112px; // the height of the Canonical header, plus the discourse header
+
+.user-menu .quick-access-panel .user-menu-button-all-notifications {
+  flex-flow: column;
+}
